--- a/scripts/install
+++ b/scripts/install
@@ -18,7 +18,7 @@ source /usr/share/yunohost/helpers
 ynh_script_progression --message="Setting up source files..." --weight=1
 
 # Download, check integrity, uncompress and patch the source from app.src
-#ynh_setup_source --dest_dir="$install_dir"
+ynh_setup_source --dest_dir="$install_dir"
 
 chown -R $app:www-data "$install_dir"
 
@@ -32,10 +32,17 @@ ynh_script_progression --message="Building app..." --weight=1
 ynh_exec_warn_less ynh_install_go --go_version=$go_version
 ynh_use_go
 pushd $install_dir/
-	GOBIN=/usr/local/bin $ynh_go install go.senan.xyz/gonic/cmd/gonic@latest
+	ynh_exec_warn_less ynh_exec_as $app CGO_ENABLED=0 $ynh_go build -ldflags='-s -w' -o $install_dir
 popd
-
+pushd $install_dir/build_ldap/
+	ynh_exec_warn_less ynh_exec_as $app CGO_ENABLED=0 $ynh_go build -ldflags='-s -w' -o $install_dir/live_ldap/
+popd
 ynh_remove_go
+# ynh_secure_remove --file="$install_dir/build/"
+# ynh_secure_remove --file="$install_dir/build_ldap/"
+# ynh_secure_remove --file="$install_dir/.cache/"
+# ynh_secure_remove --file="$install_dir/go/"
+# ynh_secure_remove --file="$install_dir/.go-version"
 
 #=================================================
 # SYSTEM CONFIGURATION
