--- a/scripts/install
+++ b/scripts/install
@@ -31,7 +31,7 @@ ynh_script_progression --message="Building app..." --weight=1
 
 ynh_exec_warn_less ynh_install_go --go_version=$go_version
 ynh_use_go
-pushd $install_dir/
+pushd $install_dir/cmd/gonic
 	ynh_exec_warn_less ynh_exec_as $app CGO_ENABLED=0 $ynh_go build -ldflags='-s -w' -o $install_dir
 popd
 pushd $install_dir/build_ldap/
